# hash-miner

./: .gitignore  Cargo.toml  README.md  config.example.toml  start.bat  start.sh
.github/workflows/: release.yml
shaders/: keccak.wgsl
src/: chain.rs  gpu.rs  main.rs
