[package]
name = "hash-miner"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "22"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
alloy = { version = "0.8", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
hex = "0.4"
tiny-keccak = { version = "2", features = ["keccak"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console", "Win32_Foundation"] }

[profile.release]
opt-level = 3
lto = "thin"
